--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/SchemaAnalyzer.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/SchemaAnalyzer.xaml
@@ -2,32 +2,57 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vc="clr-namespace:Visifire.Charts;assembly=WPFVisifire.Charts"
-    Height="421" Width="537" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="Schema Analyzer" FontSize="11">
-    <DockPanel Margin="2,5,5,5">
-        <TabControl>
-            <TabItem Header="File1" Name="tab1">
-                <vc:Chart Name="chart1">
-                    <vc:Chart.Series>
-                        <vc:DataSeries>
-                            <vc:DataSeries.DataPoints>
-                                <vc:DataPoint />
-                            </vc:DataSeries.DataPoints>
-                        </vc:DataSeries>
-                    </vc:Chart.Series>
-                </vc:Chart>
-            </TabItem>
-            <TabItem Header="File2" Name="tab2">
-                <vc:Chart Name="chart2">
-                    <vc:Chart.Series>
-                        <vc:DataSeries>
-                            <vc:DataSeries.DataPoints>
-                                <vc:DataPoint />
-                            </vc:DataSeries.DataPoints>
-                        </vc:DataSeries>
-                    </vc:Chart.Series>
-                </vc:Chart>
-            </TabItem>
-            <TabItem Header="Both" Name="tab3"></TabItem>
-        </TabControl>
-    </DockPanel>
+    xmlns:viennaaddin="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
+    Height="421" Width="537" MinHeight="200" MinWidth="390" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="Schema Analyzer" FontSize="11">
+    <Canvas Name="canvas">
+        <DockPanel Margin="2,2,2,2" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+            <TabControl>
+                <TabItem Header="File1" Name="tab1">
+                    <vc:Chart Name="chart1">
+                        <vc:Chart.Series>
+                            <vc:DataSeries>
+                                <vc:DataSeries.DataPoints>
+                                    <vc:DataPoint />
+                                </vc:DataSeries.DataPoints>
+                            </vc:DataSeries>
+                        </vc:Chart.Series>
+                    </vc:Chart>
+                </TabItem>
+                <TabItem Header="File2" Name="tab2">
+                    <vc:Chart Name="chart2">
+                        <vc:Chart.Series>
+                            <vc:DataSeries>
+                                <vc:DataSeries.DataPoints>
+                                    <vc:DataPoint />
+                                </vc:DataSeries.DataPoints>
+                            </vc:DataSeries>
+                        </vc:Chart.Series>
+                    </vc:Chart>
+                </TabItem>
+                <TabItem Header="Both" Name="tab3"></TabItem>
+            </TabControl>
+        </DockPanel>
+        <Button Width="100" Height="23" Canvas.Top="0" Canvas.Right="0" Click="Button_Click">Load files...</Button>
+        <Canvas Visibility="Collapsed" Name="innerCanvas" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+            <Rectangle Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="{Binding ElementName=innerCanvas, Path=ActualHeight}">
+                <Rectangle.Fill>
+                    <SolidColorBrush Color="Gray" Opacity="0.75"/>
+                </Rectangle.Fill>
+            </Rectangle>
+            <DockPanel Name="dock" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="{Binding ElementName=innerCanvas, Path=ActualHeight}">
+                <GroupBox Width="350" Height="135" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+                    <StackPanel Orientation="Vertical">
+                        <Label>Choose first file:</Label>
+                        <viennaaddin:FileSelector Name="fileSelector1" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd"/>
+                        <Label>Choose second file (optionally):</Label>
+                        <viennaaddin:FileSelector Name="fileSelector2" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd"/>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="1,10,1,1">
+                            <Button HorizontalAlignment="Center" Width="100" Name="buttonOk" Margin="5,5,5,5" Click="buttonOk_Click">_OK</Button>
+                            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click" IsCancel="True">_Cancel</Button>
+                        </StackPanel>
+                    </StackPanel>
+                </GroupBox>
+            </DockPanel>
+        </Canvas>
+    </Canvas>
 </Window>
