--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/SchemaAnalyzer.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/SchemaAnalyzer.xaml
@@ -48,7 +48,7 @@
                         <viennaaddin:FileSelector Name="fileSelector2" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="1,10,1,1">
                             <Button HorizontalAlignment="Center" Width="100" Name="buttonOk" Margin="5,5,5,5" Click="buttonOk_Click">_OK</Button>
-                            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click" IsCancel="True">_Cancel</Button>
+                            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click">_Cancel</Button>
                         </StackPanel>
                     </StackPanel>
                 </GroupBox>
