--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:viennaaddin="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
-    Height="500" Width="464" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="XML Schema Importer Wizard" FontSize="11">
+    Height="500" Width="509" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="XML Schema Importer Wizard" FontSize="11">
     <DockPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,5,5,5">
             <Button HorizontalAlignment="Left" Height="23" Name="buttonImport" Width="175" Click="buttonImport_Click">_Import XML Schemas</Button>
@@ -18,7 +18,10 @@
                 <TabItem.Content>
                     <DockPanel>
                         <Label DockPanel.Dock="Top" Height="23" Name="label12">Select ebInterface Schema:</Label>
-                        <viennaaddin:FileSelector Name="mappedSchemaFileSelector" DockPanel.Dock="Top" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd"/>
+                        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+                            <viennaaddin:FileSelector Name="mappedSchemaFileSelector" DockPanel.Dock="Top" Width="420" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
+                            <Button Margin="1,0,0,0" ToolTip="Show in Schema Analyzer" Name="ButtonSchemaAnalyzer" Click="ButtonSchemaAnalyzer_Click"><Image Name="ButtonSchemaAnalyzerImage" Width="16" Height="16" Source="./../../../../Resources/IconAnalyze.png" /></Button>
+                        </StackPanel>
                         <StackPanel Name="mappedSchemaFileSelectorPanel" DockPanel.Dock="Top" VerticalAlignment="Stretch" Margin="5,0,5,0" />
                         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
                             <Label DockPanel.Dock="Top" Name="label3" Height="23">Select mapping files:</Label>
