--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:viennaaddin="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
-    Height="500" Width="509" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="XML Schema Importer Wizard" FontSize="11">
+    Height="530" Width="509" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="XML Schema Importer Wizard" FontSize="11">
     <DockPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,5,5,5">
             <Button HorizontalAlignment="Left" Height="23" Name="buttonImport" Width="175" Click="buttonImport_Click">_Import XML Schemas</Button>
@@ -44,18 +44,31 @@
                             <Label Height="23" Width="150">BIE Library Name:</Label>
                             <TextBox Name="bieLibraryNameTextBox" Width="305">ebInterface BIELibrary</TextBox>
                         </StackPanel>
-                        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0,5,0,0">
+                        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">DOC Library Name:</Label>
                             <TextBox Name="docLibraryNameTextBox" Width="305">ebInterface Invoice</TextBox>
                         </StackPanel>
+                        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
+                            <Label Height="23" Width="150">bLibrary:</Label>
+                            <ComboBox Name="bLibraryComboBox" Width="305" ItemsSource="{Binding Path=Model.BLibraries}" SelectionChanged="bLibraryComboBox_SelectionChanged">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <ComboBoxItem Content="{Binding Path=Name}" />
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </StackPanel>
+                        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0,5,0,0">
+                            <Label Height="23" Width="150">CC Library:</Label>
+                            <ComboBox Name="ccLibraryComboBox" Width="305" ItemsSource="{Binding Path=Model.CcLibraries}" SelectionChanged="ccLibraryComboBox_SelectionChanged">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <ComboBoxItem Content="{Binding Path=Name}" />
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </StackPanel>
                         <ListBox ItemsSource="{Binding Path=Model.MappingFiles}" Name="mappingFilesListBox" Margin="5,0,5,0" SelectionMode="Single" />
-<!--                       <ListBox ItemsSource="{Binding Path=Model.MappingFiles}" Name="mappingFilesListBox" Margin="5,0,5,0">
-                           <ListBox.ItemTemplate>
-                                <DataTemplate>
-                                    <viennaaddin:InlineFileSelector Filename="{Binding Path=File, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="-2,0,0,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" Height="30" />
-                                </DataTemplate>
-                            </ListBox.ItemTemplate>
-                        </ListBox>-->
                     </DockPanel>
                 </TabItem.Content>
             </TabItem>
