--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/ExporterForm.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/ExporterForm.xaml
@@ -16,11 +16,17 @@
         </StackPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,5,0,0">
             <Label Height="75" Width="160">Documents to be generated:</Label>
-            <ListBox Name="comboboxDocuments" Width="300" Height="75" />
+            <ListBox Name="comboboxDocuments" Width="300" Height="75"  >
+                <ListBox.Resources>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent"/>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent"/>
+                </ListBox.Resources>
+            </ListBox>
         </StackPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,5,0,0">
             <Label Height="23" Width="160">Document Model:</Label>
-            <ComboBox Name="comboboxDocumentModel" Width="300" SelectionChanged="comboboxDocumentModel_SelectionChanged"></ComboBox>
+            <ComboBox Name="comboboxDocumentModel" Width="300" SelectionChanged="comboboxDocumentModel_SelectionChanged">
+            </ComboBox>
         </StackPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,5,0,0">
             <Label Height="23" Width="160">XML Schema output directory:</Label>
