--- a/VIENNAAddIn/upcc3/Stereotype.tt
+++ b/VIENNAAddIn/upcc3/Stereotype.tt
@@ -12,7 +12,7 @@
 // *******************************************************************************
 using System.Collections.Generic;
 
-namespace VIENNAAddIn.upcc3.ccts.util
+namespace VIENNAAddIn.upcc3
 {
     ///<summary>
     /// Definition of stereotype strings for UPCC elements.
