--- a/VIENNAAddIn/upcc3/TaggedValues.tt
+++ b/VIENNAAddIn/upcc3/TaggedValues.tt
@@ -10,7 +10,7 @@
 // For further information on the VIENNAAddIn project please visit 
 // http://vienna-add-in.googlecode.com
 // *******************************************************************************
-namespace VIENNAAddIn.upcc3.ccts.util
+namespace VIENNAAddIn.upcc3
 {
     /// <summary>
     /// Tagged value keys defined by UPCC.
