--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
@@ -5,13 +5,13 @@
     Height="530" Width="509" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="XML Schema Importer Wizard" FontSize="11">
     <DockPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,5,5,5">
-            <Button HorizontalAlignment="Left" Height="23" Name="buttonImport" Width="175" Click="buttonImport_Click">_Import XML Schemas</Button>
-            <Button HorizontalAlignment="Left" Height="23" Name="buttonClose" Width="75" Margin="30,0,0,0" Click="buttonClose_Click">_Close</Button>
+            <Button KeyboardNavigation.TabIndex="16" HorizontalAlignment="Left" Height="23" Name="buttonImport" Width="175" Click="buttonImport_Click">_Import XML Schemas</Button>
+            <Button KeyboardNavigation.TabIndex="17" HorizontalAlignment="Left" Height="23" Name="buttonClose" Width="75" Margin="30,0,0,0" Click="buttonClose_Click">_Close</Button>
         </StackPanel>
         <TextBox DockPanel.Dock="Bottom" Height="66" Margin="22,5,5,0" Name="textboxStatus" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap"/>
         <Label DockPanel.Dock="Bottom" Name="label2" Margin="22,5,5,0" Height="23"  HorizontalAlignment="Left">Status:</Label>
         <TabControl Name="tabControl1" TabStripPlacement="Left" Margin="5,5,5,0">
-            <TabItem Name="tabEbInterface" Header="ebInterface">
+            <TabItem KeyboardNavigation.TabIndex="1" Name="tabEbInterface" Header="ebInterface">
                 <TabItem.LayoutTransform>
                     <RotateTransform Angle="270"></RotateTransform>
                 </TabItem.LayoutTransform>
@@ -19,38 +19,38 @@
                     <DockPanel>
                         <Label DockPanel.Dock="Top" Height="23" Name="label12">Select ebInterface Schema:</Label>
                         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-                            <viennaaddin:FileSelector Name="mappedSchemaFileSelector" DockPanel.Dock="Top" Width="420" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
-                            <Button Margin="1,0,0,0" ToolTip="Show in Schema Analyzer" Name="ButtonSchemaAnalyzer" Click="ButtonSchemaAnalyzer_Click"><Image Name="ButtonSchemaAnalyzerImage" Width="16" Height="16" Source="./../../../../Resources/IconAnalyze.png" /></Button>
+                            <viennaaddin:FileSelector KeyboardNavigation.TabIndex="2" Name="mappedSchemaFileSelector" DockPanel.Dock="Top" Width="420" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
+                            <Button KeyboardNavigation.TabIndex="3" Margin="1,0,0,0" ToolTip="Show in Schema Analyzer" Name="ButtonSchemaAnalyzer" Click="ButtonSchemaAnalyzer_Click"><Image Name="ButtonSchemaAnalyzerImage" Width="16" Height="16" Source="./../../../../Resources/IconAnalyze.png" /></Button>
                         </StackPanel>
                         <StackPanel Name="mappedSchemaFileSelectorPanel" DockPanel.Dock="Top" VerticalAlignment="Stretch" Margin="5,0,5,0" />
                         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
                             <Label DockPanel.Dock="Top" Name="label3" Height="23">Select mapping files:</Label>
-                            <Button Click="Add_Click" Padding="3,0">+</Button>
-                            <Button Click="RemoveSelection_Click" Padding="4,0">-</Button>
+                            <Button KeyboardNavigation.TabIndex="4" Click="Add_Click" Padding="3,0">+</Button>
+                            <Button KeyboardNavigation.TabIndex="6" Click="RemoveSelection_Click" Padding="4,0">-</Button>
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">Qualifier:</Label>
-                            <TextBox Name="qualifierTextBox" Width="305">ebInterface</TextBox>
+                            <TextBox KeyboardNavigation.TabIndex="13" Name="qualifierTextBox" Width="305">ebInterface</TextBox>
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">Message Assembly Name:</Label>
-                            <TextBox Name="rootElementNameTextBox" Width="305">Invoice</TextBox>
+                            <TextBox KeyboardNavigation.TabIndex="12" Name="rootElementNameTextBox" Width="305">Invoice</TextBox>
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">BDT Library Name:</Label>
-                            <TextBox Name="bdtLibraryNameTextBox" Width="305">ebInterface BDTLibrary</TextBox>
+                            <TextBox KeyboardNavigation.TabIndex="11" Name="bdtLibraryNameTextBox" Width="305">ebInterface BDTLibrary</TextBox>
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">BIE Library Name:</Label>
-                            <TextBox Name="bieLibraryNameTextBox" Width="305">ebInterface BIELibrary</TextBox>
+                            <TextBox KeyboardNavigation.TabIndex="10" Name="bieLibraryNameTextBox" Width="305">ebInterface BIELibrary</TextBox>
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">DOC Library Name:</Label>
-                            <TextBox Name="docLibraryNameTextBox" Width="305">ebInterface Invoice</TextBox>
+                            <TextBox KeyboardNavigation.TabIndex="9" Name="docLibraryNameTextBox" Width="305">ebInterface Invoice</TextBox>
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">bLibrary:</Label>
-                            <ComboBox Name="bLibraryComboBox" Width="305" ItemsSource="{Binding Path=Model.BLibraries}" SelectionChanged="bLibraryComboBox_SelectionChanged">
+                            <ComboBox KeyboardNavigation.TabIndex="8" Name="bLibraryComboBox" Width="305" ItemsSource="{Binding Path=Model.BLibraries}" SelectionChanged="bLibraryComboBox_SelectionChanged">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <ComboBoxItem Content="{Binding Path=Name}" />
@@ -60,7 +60,7 @@
                         </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0,5,0,0">
                             <Label Height="23" Width="150">CC Library:</Label>
-                            <ComboBox Name="ccLibraryComboBox" Width="305" ItemsSource="{Binding Path=Model.CcLibraries}" SelectionChanged="ccLibraryComboBox_SelectionChanged">
+                            <ComboBox KeyboardNavigation.TabIndex="7" Name="ccLibraryComboBox" Width="305" ItemsSource="{Binding Path=Model.CcLibraries}" SelectionChanged="ccLibraryComboBox_SelectionChanged">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <ComboBoxItem Content="{Binding Path=Name}" />
@@ -68,7 +68,7 @@
                                 </ComboBox.ItemTemplate>
                             </ComboBox>
                         </StackPanel>
-                        <ListBox ItemsSource="{Binding Path=Model.MappingFiles}" Name="mappingFilesListBox" Margin="5,0,5,0" SelectionMode="Single" />
+                        <ListBox KeyboardNavigation.TabIndex="5" ItemsSource="{Binding Path=Model.MappingFiles}" Name="mappingFilesListBox" Margin="5,0,5,0" SelectionMode="Single" />
                     </DockPanel>
                 </TabItem.Content>
             </TabItem>
@@ -79,7 +79,7 @@
                 <TabItem.Content>
                     <StackPanel HorizontalAlignment="Stretch">
                         <Label Height="23" Name="label1">Select root XML Schema:</Label>
-                        <viennaaddin:FileSelector Name="cctsSchemaFileSelector" DockPanel.Dock="Top" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
+                        <viennaaddin:FileSelector KeyboardNavigation.TabIndex="15" Name="cctsSchemaFileSelector" DockPanel.Dock="Top" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
                     </StackPanel>
                 </TabItem.Content>
             </TabItem>
